@@ -40,9 +40,12 @@ int	USER_PERFCOUNTER(const char *cmd, const char *param, unsigned flags, AGENT_R
 
 	for(perfs = collector->perfs.pPerfCounterList; perfs; perfs=perfs->next)
 	{
-		if ( 0 == strcmp(perfs->name, param) )
+		if (NULL != perfs->name && 0 == strcmp(perfs->name, param) )
 		{
-			SET_DBL_RESULT(result, perfs->lastValue);
+			if (ITEM_STATUS_NOTSUPPORTED == perfs->status)
+				SET_MSG_RESULT(result, strdup(perfs->error))
+			else
+				SET_DBL_RESULT(result, perfs->lastValue)
 			ret = SYSINFO_RET_OK;
 			break;
 		}
@@ -90,13 +93,16 @@ int	PERF_MONITOR(const char *cmd, const char *param, unsigned flags, AGENT_RESUL
 		}
 
 		for (perfs = collector->perfs.pPerfCounterList; perfs != NULL; perfs = perfs->next) {
-			if (0 == strcmp(perfs->counterPath, counter_path) && perfs->interval == interval) {
-				SET_DBL_RESULT(result, perfs->lastValue);
+			if (NULL == perfs->name && 0 == strcmp(perfs->counterPath, counter_path) && perfs->interval == interval) {
+				if (ITEM_STATUS_NOTSUPPORTED == perfs->status)
+					SET_MSG_RESULT(result, strdup(perfs->error))
+				else
+					SET_DBL_RESULT(result, perfs->lastValue)
 				return SYSINFO_RET_OK;
 			}
 		}
 
-		if (FAIL == add_perf_counter("", counter_path, interval))
+		if (FAIL == add_perf_counter(NULL, counter_path, interval))
 			return SYSINFO_RET_FAIL;
 	}
 
