@@ -65,6 +65,7 @@ Changes for 1.7.0
 
 Changes for 1.6.6
 
+ - [ZBX-809] fixed memory leak while processing perf_counter metric under Windows (Sasha)
  - [ZBX-959] fixed windows agent crash while processing performance counters under Windows 2000. Thanks to Takanori Suzuki (Sasha)
  - [ZBX-733] added checks on value map creation/update (Artem)
  - [ZBX-768] improved menu linebreaking (Artem)
